crates/aura-macros/tests/boundaries/authoritative_source_invalid_kind.rs
#[aura_macros::authoritative_source(kind = "view")]
async fn invalid_kind() {}

fn main() {}
